--- a/app/views/settings/show.haml
+++ b/app/views/settings/show.haml
@@ -1,16 +1,11 @@
 - content_for :javascript do
-  initialize_update_profile_info_form("#{I18n.locale}","#{target_user.id.to_s}", #{@current_community.real_name_required?});
-
-- content_for :extra_javascript do
-  - maps_key = @current_community.google_maps_key
-  - key_param = maps_key ? "?key=#{maps_key}" : ""
-  = javascript_include_tag "https://maps.googleapis.com/maps/api/js#{key_param}"
+  initialize_update_profile_info_form("#{I18n.locale}","#{target_user.id.to_s}", false);
 
 - content_for :title_header do
   %h1= t("layouts.no_tribe.settings")
 .row
   .col-3
-    = render :partial => "layouts/left_hand_navigation", :locals => { :links => settings_links_for(target_user, @current_community) }
+    = render :partial => "layouts/left_hand_navigation", :locals => { :links => settings_links_for(target_user) }
   .col-9
     #person_settings_form.settings-section
     %p
@@ -24,25 +19,7 @@
         .inline-label-container
           = form.label :family_name, t("settings.profile.family_name"), :class => "inline"
           %small
-            - if ["first_name_with_initial", "first_name_only"].include? @current_community.name_display_type
-              = t("settings.profile.#{@current_community.name_display_type}")
         = form.text_field :family_name, :class => "text_field", :maxlength => "30"
-
-      -# Location
-      .inline-label-container
-        = form.label :street_address, t("settings.profile.street_address"), :class => "inline"
-        %small
-          = t('settings.profile.default_in_listing')
-      = form.text_field :street_address, :class => "text_field", :onkeyup => "timed_input(this)"
-      %small
-        = t("settings.profile.location_description")
-      #settings_map_canvas.map
-        - content_for :extra_javascript do
-          :javascript
-            source = document.getElementById("person_street_address");
-            $(document).ready(function(){
-              googlemapMarkerInit("settings_map_canvas","person_location","person_street_address", true, #{tribe_latitude}, #{tribe_longitude});
-              });
 
       -# Phone number
       .inline-label-container
