--- a/app/views/people/show.haml
+++ b/app/views/people/show.haml
@@ -3,7 +3,7 @@
 
 - content_for :title_header do
   %h1
-    %span.profile-title= @person.name(@current_community) + (@community_customization && @community_customization.storefront_label ? @community_customization.storefront_label : "")
+    %span.profile-title= @person.given_name + "'s tack shop"
 
 .row
   .col-8
@@ -18,7 +18,7 @@
       - if @person.description && !@person.description.blank?
         - text_with_line_breaks do
           = @person.description
-      - elsif current_user?(@person)
+      - elsif @current_user && @current_user.id == @person.id
         %a{href: person_settings_path(@person)}
           .icon-with-text-container
             .ss-chat.icon-part
@@ -27,17 +27,17 @@
     .row
       %h2.people-header
         - if listings.total_entries > 0
-          - if current_user?(@person) && params[:show_closed]
+          - if @current_user && @current_user.id == @person.id && params[:show_closed]
             = pluralize(listings.total_entries, t(".listing"), t(".listings"))
           - else
             = pluralize(listings.total_entries, t(".open_listing"), t(".open_listings"))
         - else
-          - if current_user?(@person) && params[:show_closed]
+          - if @current_user && @current_user.id == @person.id && params[:show_closed]
             = t(".no_listings")
           - else
             = t(".no_open_listings")
         %span.people-show-closed-link
-          - if current_user?(@person)
+          - if @current_user && @current_user.id == @person.id
             - if params[:show_closed]
               = link_to t("people.profile_listings.show_only_open"), person_path(@person)
             - else
@@ -47,21 +47,19 @@
       - limit = 6
       = render :partial => 'listings/profile_listings', :locals => {person: @person, limit: limit, listings: listings}
 
-    - if @current_community.follow_in_use?
-      = render :partial => "followed_people", :locals => { person: @person, followed_people: followed_people, limit: 6 }
+    = render :partial => "followed_people", :locals => { person: @person, followed_people: followed_people, limit: 6 }
 
-    - if @current_community.testimonials_in_use
-      #people-testimonials.listing-main
-        .row
-          %h2.people-header
-            - if received_testimonials.size > 0
-              = pluralize(received_testimonials.size, t(".review"), t(".reviews"))
-              = "(#{feedback_positive_percentage.to_s}% #{t("people.show.positive")}, #{received_positive_testimonials.size}/#{received_testimonials.size})"
-            - else
-              = t(".no_reviews")
+    #people-testimonials.listing-main
+      .row
+        %h2.people-header
           - if received_testimonials.size > 0
-            #profile-testimonials-list
-              = render :partial => "testimonials", :locals => {:received_testimonials => received_testimonials, :limit => 3}
+            = pluralize(received_testimonials.size, t(".review"), t(".reviews"))
+            = "(#{feedback_positive_percentage.to_s}% #{t("people.show.positive")}, #{received_positive_testimonials.size}/#{received_testimonials.size})"
+          - else
+            = t(".no_reviews")
+        - if received_testimonials.size > 0
+          #profile-testimonials-list
+            = render :partial => "testimonials", :locals => {:received_testimonials => received_testimonials, :limit => 3}
 
   .col-4
     .row
